// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiKeyPadMenu checkable is rendered as a fieldset when true 1`] = `
<fieldset
  class="euiKeyPadMenu emotion-euiKeyPadMenu"
/>
`;

exports[`EuiKeyPadMenu checkable is rendered as with a legend 1`] = `
<fieldset
  class="euiKeyPadMenu emotion-euiKeyPadMenu"
>
  <legend
    aria-label="aria-label"
    class="euiFormLabel testClass1 testClass2 emotion-euiFormLabel-euiKeyPadMenu__legend-euiTestCss"
    data-test-subj="test subject string"
  >
    Legend
  </legend>
</fieldset>
`;

exports[`EuiKeyPadMenu checkable is rendered as with an ariaLegend 1`] = `
<fieldset
  aria-label="Aria legend"
  class="euiKeyPadMenu emotion-euiKeyPadMenu"
/>
`;

exports[`EuiKeyPadMenu is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="euiKeyPadMenu testClass1 testClass2 emotion-euiKeyPadMenu-euiTestCss"
  data-test-subj="test subject string"
/>
`;
